# mcp-open-webui

./: .env  Dockerfile  README.md  config.py  openwebui_client.py  pyproject.toml  requirements.txt  run.py  server.py
.github/workflows/: docker-build.yml
